@@ -41,6 +41,9 @@ pg_claim_job(Pg::Connection &db,
 int pg_set_job_progress(Pg::Connection &db, const char *job_id, unsigned progress,
                         const char *timeout);
 
+void
+PgSetEnv(Pg::Connection &db, const char *job_id, const char *more_env);
+
 /**
  * Throws on error.
  */
